<resources>
    <string name="app_name">Wagba</string>
    <string name="txt1">Don\'t have an account?</string>
    <string name="txt_forgotPw">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="txt_signup">Signup</string>
    <string name="hint_password">Password</string>
    <string name="hint_mail">Enter your Email</string>
    <string name="wagba_logo_description">wagba_logo</string>
    <string name="btn_signup_login">Login</string>
    <string name="btn_signup_signup">SIGN UP</string>
    <string name="txt_signup_pw_restriction_1">Be from 8 to 16 letters</string>
    <string name="txt_signup_pw_restriction_2"><![CDATA[Contain upper & lowercase letters]]></string>
    <string name="txt_signup_pw_restriction_3"><![CDATA[Contain symbols & numbers]]></string>
    <string name="hint_signup_phone">Enter your Phone Number</string>
    <string name="hint_confirm_pw">Confirm Password</string>
    <string name="hint_name">Enter your Name</string>
    <string name="txt_signup_haveaccount">Have an Account?</string>
    <string name="txt_signup_pw_restriction_0">Password Must:</string>
    <string name="wagba_text_logo_description">Wagba_text_Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faculty_name">Faculty of Engineering, Ain Shams University</string>
    <string name="delivering_to">Delivering To</string>
    <string name="location_icon_description">Location Icon</string>
    <string name="search_hint">Search Food and Restaurants...</string>
    <string name="search_icon_desc">search_icon</string>
    <string name="filter_icon_desc">filter_icon</string>
    <string name="category_template">Category</string>
    <string name="category_icon_desc">category_icon</string>
    <string name="featured_restaurants_txt">Featured Restaurants</string>
    <string name="our_favorite_meals">Our Favorite Meals</string>
    <string name="order_id_example">#12222302</string>
    <string name="order_date_example">DEC 12, 2022</string>
    <string name="show_order">Show Order</string>
    <string name="bag_icon_desc">bag_icon</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="bigmac">BigMac</string>
    <string name="egp">EGP</string>
    <string name="price_example">99.99</string>
    <string name="quantity_example">1x</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="delivery_gate">Delivery Gate</string>
    <string name="gate_3">Gate 3</string>
    <string name="gate_4">Gate 4</string>
    <string name="_12_00_noon_period">12:00 (Noon Period)</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="_15_00_pm_period">15:00 (PM Period)</string>
    <string name="additional_instructions">Additional Instructions</string>
    <string name="type_any_additional_info_here">Type any additional info here ...</string>
    <string name="order_summary">Order Summary</string>
    <string name="view_all_underlined">View All</string>
    <string name="viewpw">viewPw</string>
</resources>