<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login">

    <EditText
        android:id="@+id/et_signin_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_mail_icon"
        android:drawablePadding="10sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_signin_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_signin_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_pw_icon"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/tv_signin_forgotpw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signin_mail"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/wagba_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_forgotpw"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_signin_forgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_forgotPw"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_login"
        app:layout_constraintEnd_toEndOf="@+id/et_signin_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_signin_pw" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/txt1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_signup_loginbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_signup_loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_signup"
        android:textColor="@color/wagba_main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_signin_forgotpw"
        app:layout_constraintStart_toStartOf="@+id/tv_signin_forgotpw"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/login_viewpw_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="#ffffff"
        android:contentDescription="@string/viewpw"
        app:layout_constraintBottom_toBottomOf="@+id/et_signin_pw"
        app:layout_constraintEnd_toEndOf="@+id/et_signin_pw"
        app:layout_constraintTop_toTopOf="@+id/et_signin_pw"
        app:srcCompat="@drawable/ic_baseline_visibility"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>