<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/tv_meal_namee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/bigmac"
            android:textColor="@color/ChineseBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_meal_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_meal_pricee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/egp"
            android:textColor="@color/wagba_main"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meal_namee"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_meal_pricee2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/price_example"
            android:textColor="@color/ChineseBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_meal_pricee"
            app:layout_constraintStart_toEndOf="@+id/tv_meal_pricee"
            app:layout_constraintTop_toTopOf="@+id/tv_meal_pricee" />

        <TextView
            android:id="@+id/tv_meal_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/quantity_example"
            android:textColor="@color/ChineseBlack_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>