<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/po_bag_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bag_icon_desc"
                android:padding="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_bag"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/po_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/order_date_example"
            android:textColor="@color/ChineseBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/po_id_txt"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/po_id_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/order_id_example"
            android:textColor="@color/ChineseBlack_500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/po_date_txt"
            app:layout_constraintTop_toBottomOf="@+id/po_date_txt" />

        <Button
            android:id="@+id/po_show_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/show_order"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/po_id_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/po_date_txt"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>